# fawltydeps-issue419-test

./: pyproject.toml  shell.nix  test_app.sh  test_isort.py
app/fastapi/: main.py
