[tool.poetry]
name = "fawltydeps-test"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

fastapi = "*"

[tool.poetry.group.dev.dependencies]
fawltydeps = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
